--- a/bsconfig.json
+++ b/bsconfig.json
@@ -16,10 +16,8 @@
   "bs-dependencies": [
     "reason-react",
     "bs-css",
-    "bs-date-fns"
-  ],
-  "ppx-flags": [
-    "graphql_ppx/ppx"
+    "reason-date-fns",
+    "@jsiebern/bs-material-ui"
   ],
   "refmt": 3
 }
