--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "2.0.0",
   "author": "Ian Wilson <iwilsonq@gmail.com>",
   "dependencies": {
+    "@jsiebern/bs-material-ui": "^2.0.2",
     "bs-css": "^11.0.0",
-    "bs-date-fns": "^0.1.6",
-    "bs-platform": "^5.2.1",
+    "bs-platform": "8.2.0",
     "core-js": "^3.4.7",
     "gatsby": "^2.18.6",
     "gatsby-plugin-manifest": "^2.2.31",
@@ -18,7 +18,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "reason-react": "^0.7.0"
+    "reason-date-fns": "^1.0.1",
+    "reason-react": "0.9.1"
   },
   "keywords": [
     "gatsby"
@@ -27,14 +28,13 @@
   "scripts": {
     "postinstall": "bsb -make-world",
     "build": "gatsby build",
-    "dev:bsb": "bsb -make-world -w",
-    "dev:gatsby": "gatsby develop",
+    "bs:dev": "bsb -make-world -w",
+    "start": "gatsby develop",
     "clean": "bsb -clean-world",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "graphql_ppx": "^0.2.8",
     "prettier": "^1.19.1"
   },
   "repository": {
